edit some question

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       
       <div class="faq">
         <h3 class="faq-title">
-          Do you have girlfriens?
+          Do you have girlfriends?
         </h3>
         <p class="faq-text">
           You're too Talkative
